[package]
name = "core"
version = "0.1.0"
edition = "2024"

[lib]
name = "core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3   = { version = "0.29.0", features = ["extension-module"] }
fancy-regex = "0.13"
rayon  = "1.8"
serde  = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# always use: maturin develop --release
# for tests: cargo test